<resources>
    <string name="app_name">Fed Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="category">category</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="remove_item">Remove item</string>
    <string name="icon">icon</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ingredient_icon">ingredient icon</string>
    <string name="inventory">Inventory</string>
    <string name="sort_icon">Sort icon</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for fragments for navigation -->

    <string name="recipe_image">recipe_image</string>
    <string name="recipe_title_placeholder">recipe_title_placeholder</string>
    <string name="recipe_summary_placeholder">recipe_summary_placeholder</string>
    <string name="no_ingredients_available">No ingredients available</string>
    <string name="no_instructions_available">No instructions available</string>




    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="splash_logo">Splash Logo</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>



    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign up Google</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="tap_to_select_ingredient_image">Tap to select ingredient image</string>
    <string name="decrease_quantity">decrease quantity</string>
    <string name="fridge">Fridge</string>
    <string name="increase_quantity">increase quantity</string>
    <string name="save_ingredient_button">Save Ingredient Button</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="category_icon">Category Icon</string>
    <string name="grams">grams</string>
    <string name="name">Name:</string>
    <string name="notes">Notes:</string>
    <string name="recipe">Recipe</string>
    <string name="settings">Settings</string>

        <!-- Appearance Settings -->
        <string name="appearance">Appearance</string>
        <string name="theme_color">Theme Color</string>
        <string name="language">Language</string>
        <string name="choose_language">Choose Language</string>

        <!-- Notification Settings -->
        <string name="notifications">Notifications</string>
        <string name="enable_notifications">Enable Notifications</string>
        <string name="notification_timing">Notification Timing</string>

        <!-- Privacy Settings -->
        <string name="privacy">Privacy</string>
        <string name="share_data">Share Data</string>

        <!-- Account Management -->
        <string name="account_management">Account Management</string>
        <string name="change_email_address">Change Email Address</string>
        <string name="new_email">New Email</string>
        <string name="change_password">Change Password</string>
        <string name="log_out">Log Out</string>
        <string name="enable_biometrics">Enable Face Scan Biometrics</string>

        <!-- Help & Support -->
        <string name="help_support">Help &amp; Support</string>

        <!-- Data Management -->
        <string name="data_management">Data Management</string>
        <string name="clear_cache">Clear Cache</string>

    <!-- Appearance Settings -->
    <string name="select_theme_color">Select the theme color</string>
    <string name="select_your_preferred_language">Select your preferred language</string>
    <string name="choose_when_to_be_notified_before_ingredients_expire">Choose when to be notified before ingredients expire</string>

    <!-- Notification Settings -->
    <string name="receive_notifications_about_expiring_ingredients">Receive notifications about expiring ingredients</string>

    <!-- Privacy Settings -->
    <string name="allow_sharing_data_with_third_parties">Allow sharing data with third parties</string>

    <!-- Account Management -->
    <string name="change_your_account_email">Change your account email</string>
    <string name="change_your_account_password">Change your account password</string>
    <string name="log_out_of_your_account">Log out of your account</string>
    <string name="use_your_face_fingerprint_as_extra_security_layer_for_scan_to_sign_in">Use your face/fingerprint as an extra security layer for scan to sign in</string>

    <!-- Help & Support -->
    <string name="get_help_and_contact_support">Get help and contact support</string>


    <!-- Data Management -->
    <string name="clear_cached_data">Clear cached data</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <string name="category_uncategorized">Uncategorized</string>
    <string name="category_fridge">Fridge</string>
    <string name="category_freezer">Freezer</string>
    <string name="category_pantry">Pantry</string>

        <string name="sort_by">Sort By</string>
        <string name="about_to_expire">About to Expire</string>
        <string name="alphabetical">Alphabetical</string>
    <string name="select_icon">select_icon</string>

    <string name="enable_biometrics_title">Enable Biometrics</string>
    <string name="enable_biometrics_summary">Use your face/fingerprint as an extra security layer for scan to sign in</string>


</resources>


